Updated dropzones - Drop zone now working. - Basic Feedback red/green - Fixed out of bounds issues - Elements now properly appear above the canvas area.

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 /***********************************************************
 This file is used to style the Roast Card Website.
   - index.html
-
-Created By: Andrew Patterson For Roast From the Coast - Project 1 of GetCoding
-
 ******************************************************************/
 
 /* Reset some default styles */
@@ -39,8 +36,6 @@ h1 {
 
   touch-action: none;
   user-select: none;
-
-  transition: background-color 0.3s;
 }
 /*****************************************************************
   - Header Section
@@ -151,11 +146,12 @@ main {
   left: 0;
   
   width: 10%;
-  height: 80vh;
+  height: 90vh;
 
   background-color: #f2f2f2;
   border: 1px solid #000;
 
+  z-index: 1;
 }
 .canvas-area {
   display: flex;
@@ -179,6 +175,7 @@ main {
 
   min-height: 300px;
   height: 300px;
+  z-index: 0;
 }
 .border {
   position: absolute;
@@ -188,6 +185,7 @@ main {
   left: 0;
   border: 20px solid transparent; /* Adjust border width */
   border-image: url('../img/stamp.png') 30 round; /* Adjust image path and slicing */
+  z-index: 0;
 }
 .start-container {
   display: flex;
@@ -225,14 +223,13 @@ main {
   display: flex;
   justify-content: flex-start;
 
-  z-index: 1;
-
   width: 100%;
   height: 100%;
   
   background-color: #f2f2f2;
   transition: background-color 0.3s;
   border: 1px solid #000;
+  z-index: 1;
 
 }
 
@@ -265,14 +262,14 @@ main {
 ******************************************************************/
 
 .origin-element {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   max-width: 100%;
   max-height: 100px;
 
   margin: 5px;
-  padding: 5px;
-
-  z-index: 1;
 }
 
 .canvas-element {
@@ -292,10 +289,7 @@ main {
 .date-element {
   color: #fff;
   background-color: #29e;
-  border: solid 2px #fff;
   
-  min-width: 75px;
-  min-height: 50px;
   padding: 5px;
 }
 
@@ -303,14 +297,12 @@ main {
 /*****************************************************************
   - DropZone Styles
 ******************************************************************/
-  .drop-active {
-    background-color: rgb(255, 102, 102);
-    opacity: 0.1;
+  .drop-active-noDrop{
+    background-color: rgba(255, 102, 102, 0.400);
   }
   
-  .drop-target {
-    background-color: #4e4;
-    opacity: 0.1;
+  .drop-active-canDrop {
+    background-color: rgba(68, 238, 68, 0.400);
 
   }
 
